refactor: remove old genres
